# workx

./: .dockerignore  .env.example  .gitignore  .pidash-workpad-w7.md  AGENTS.md  BROWSER_USE_QUICK_REFERENCE.md  BROWSER_USE_SERIALIZATION_ANALYSIS.md  CHANGELOG.md  CONTEXT_BASED_TAB_BINDING.md  COORDINATE_SYSTEM.md  DEBUG-QUICK-REF.md  DELAY_FIX_RECOMMENDATIONS.md  DOM-TOOL-DEBUG-GUIDE.md  Dockerfile  FINAL_REPORT.md  IMPLEMENTATION_RECOMMENDATIONS.md  IMPLEMENTATION_SUMMARY.md  INPUTEXECUTOR-FIX-SUMMARY.md  NEXT_STEPS.md  README.md  README_BROWSER_USE_ANALYSIS.md  SCREENSHOT_BUG_INVESTIGATION.md  TAB_UNBIND_BUG_FIX.md  browserx-files.txt  build.sh  debug-gemini.ts  docker-compose.yml  eslint.config.js  managed-schema.json  manifest.json  open_source_mapping.json  package-lock.json  package.json  test-input-executor.html  test-scroll-verification.ts  tsconfig.json  tsconfig.server.json  validate-implementation.js  verify-config-integration.ts  vite-env.d.ts  (+15 more)
.ai_design/: architecture.html  architecture.md  cdp_design_gemini.md  cdp_dom_tool_design_claude.md  channel_thread_event_routing.md  config_inode_access_control.md  data_connector_design.md  desktop_app_design.md  desktop_app_raw_chat_history.md  desktop_authentication_design.md  dom_flatten_and_compact_design.md  mcp_store_design.md  new_domtool_design_claude.md  new_domtool_design_codex.md  prompt_composer_design.md  server_mode.md  task_system_design.md  user_approval_system_design.md
.ai_design/011-chat-history-compact/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
.ai_design/agent_improvements/: README.md  plan.md  track_status.yml
.ai_design/app_for_agent/: catalog_growth_survey.md  chat_history.md  tasks.md  technical_design.md
.ai_design/app_server_mode/: design.md  tasks.md
.ai_design/applepi_agent_modes/: design.md
.ai_design/applepi_code_mode_claudy_parity/: design.md
.ai_design/applepi_file_tools/: design.md  tasks.md
.ai_design/applepi_server_decoupling/: design.md
.ai_design/claude_code_plugin/: architecture.md  design_decisions.md  gap_analysis.md  implementation_plan.md  overview.md
.ai_design/component_runtime/: design.md
.ai_design/data_analysis_mvp/: design.md  implementation.md  review.md  tasks.md
.ai_design/enable_external_facing_agent/: design_discussion.md  implementation_design.md
.ai_design/hooks/: design.md
.ai_design/improve_webtool_from_codex/: design.md  tasks.md
.ai_design/memory_design/: agent_memory_system_design.md  tasks.md
.ai_design/message_routing_v2/: design.md  tasks.md
.ai_design/migrate_main_engine/: design.md  tasks.md
.ai_design/new_multi_thread_management/: design.md  implementation-spec.md  review-log.md  tasks.md
.ai_design/openhub_app_auth/: design.md
.ai_design/preview/: preview_panel_design.md
.ai_design/server_mode/: server_mode_design.md  tasks.md
.ai_design/simplify_memory/: design.md
.ai_design/simplify_session/: design.md
.ai_design/sub_agent_improvements/: design.md  tasks.md
.ai_design/subagent/: design.md  tasks.md  (+1 more)
.architecture/: message_routing_overview.md
.debug/: final_root_cause_analysis.md  gmail_after_flattern_node.json  root_cause_analysis.md  serialize_debug_claude.md  serialize_debug_codex.md  serialize_debug_gemini.md  server_app_run_log.md  x_com_after_process.json  x_com_serialized_node.html  x_com_serialized_node.json  x_com_visibility_filter.json  x_com_visibility_filter_fixed.json
.test/: happy.txt  happy003.txt  happy005.txt
_locales/: key_map.json  supported_languages.json
docs/: AGGRESSIVE-OPEN-SOURCE-SYNC-DESIGN.md  ARCHITECTURE.md  NAMING.md  SESSION_LIFECYCLE_RPC.md  SESSION_LIFECYCLE_SUPPORT.md  gemini-agent-notes.md
scripts/: applepi-identity.js  build-desktop-runtime-sidecar.mjs  build-ripgrep-sidecar.mjs  build-sandbox.mjs  build-sidecar.mjs  build.js  bump-version.js  check-agent-improvement-status.mjs  check-env.js  dev.sh  ensure-sidecar-placeholder.mjs  extract-i18n.js  install-chromium.sh  pi-identity.js  regenerate-icons.sh  sidecar-launcher.cjs  sync-version.js  translate-i18n.js  workx-identity.js
tauri/: Cargo.toml  Info.plist  tauri.conf.json
tauri/capabilities/: default.json
tauri/icons/: icon.icns
tauri/sandbox-helper/: Cargo.toml
tauri/sandbox-helper/src/: acl.rs  appcontainer.rs  job.rs  main.rs  profile.rs
tauri/sandbox-types/: Cargo.toml
tauri/sandbox-types/src/: lib.rs
tauri/scripts/: test-rust.sh
tauri/src/: browser_commands.rs  commands.rs  db_storage.rs  fs_commands.rs  http_commands.rs  keychain_commands.rs  main.rs  mcp_commands.rs  mcp_manager.rs  memory_commands.rs  oauth_server.rs  plugins_commands.rs  ripgrep_commands.rs  rollout_db.rs  runtime_supervisor.rs  scheduler_commands.rs  skills_commands.rs  storage_commands.rs  terminal_commands.rs  voice_commands.rs
tauri/src/sandbox/: linux.rs  macos.rs  mod.rs  status.rs  windows.rs
tauri/templates/: linux-desktop.desktop
tauri/tests/: runtime_supervisor_lifecycle.rs
(+2553 files in other folders)
