[package]
name = "pi"
version = "0.1.1"
description = "Pi - AI-powered personal assistant agent"
authors = ["AI Republic"]
license = "UNLICENSED"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"
uuid = { version = "1.0", features = ["v4"] }
png = "0.17"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
directories = "5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots"] }
# rmcp removed: the deleted mcp_manager.rs was its only user; MCP runs in the
# runtime sidecar now via the NodeMCPBridge.
which = "7"
tempfile = "3"
log = "0.4"
async-trait = "0.1"
chrono = "0.4"
dirs = "5"

[features]
default = ["custom-protocol", "dark-icon"]
custom-protocol = ["tauri/custom-protocol"]
dark-icon = []
