[package]
name = "windows-sandbox"
version = "0.1.0"
edition = "2021"
description = "AppContainer sandbox helper for browserx on Windows"

[[bin]]
name = "windows-sandbox"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
log = "0.4"
env_logger = "0.11"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
    "Win32_System_JobObjects",
    "Win32_Foundation",
    "Win32_System_Memory",
] }
win32job = "2"
